dpaste/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpaste
  namespace: dpaste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpaste
  template:
    metadata:
      labels:
        app: dpaste
    spec:
      containers:
        - name: dpaste
          image: darrenofficial/dpaste:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
